# 1pipe

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
backlog/: ADR-1-eigene-bruecke-statt-workflow-werkzeug.md  M-1-erste-lauffaehige-version.md  README.md  T-1-loop-schutz.md
i18n/: CODE_OF_CONDUCT.de.md  CONTRIBUTING.de.md  README.de.md  SECURITY.de.md
scripts/: check.sh
tests/: test_repo.py
tests/_kit/: MANIFEST.sha256
